--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,17 +1,15 @@
-pipeline{
-	agent any
-	
-	stages {
-		stage 'Compile Stage'{
-		 steps{
-		 	withMaven(maven : 'maven_3_5_0' ) {
-		 		cmd 'mvn clean compile'
-		 	}
-		 }
-		
-		}
-	
-	}
-
-
+pipeline {
+    agent any 
+    stages {
+	stage('Check config') {
+            steps {
+                echo 'start building ...' 
+            }
+        }
+        stage('Compile') {
+            steps {
+                echo 'start building ...' 
+            }
+        }
+    }
 }
